// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card is rendered 1`] = `
.emotion-12 {
  margin: 1rem;
}

.emotion-13 {
  border-radius: 0.25rem;
  background-color: white;
}

.emotion-4 {
  font-size: 1.25rem;
  line-height: 1.4;
  margin-bottom: 0.75rem;
}

.emotion-2 {
  color: maroon;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8 {
  display: inline-block;
  margin-left: 1.4em;
  text-indent: -1.4em;
}

.emotion-0 {
  border-radius: 0.25rem;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  display: block;
  height: 12rem;
  background-image: url(https://url_to_img);
  background-size: cover;
  background-position: center center;
}

<div
  class="emotion-13 emotion-14"
>
  <a
    href="https://example.com"
    rel="nofollow"
    class="emotion-0 emotion-1"
  />
  <div
    class="emotion-12"
  >
    <div
      class="emotion-4 emotion-5"
    >
      <a
        href="https://example.com"
        rel="nofollow"
        class="emotion-2 emotion-3"
      >
        Little Big Burger
      </a>
    </div>
    <p>
      100.00
    </p>
    <address>
      <div>
        <span
          class="emotion-8"
        >
          <span
            role="img"
            aria-label="round pushpin"
          >
            📍
          </span>
          <a
            href="https://url_to_map"
            class="emotion-2 emotion-3"
          >
            123 Main Street
          </a>
        </span>
      </div>
      <div>
        <span
          class="emotion-8"
        >
          <span
            role="img"
            aria-label="phone receiver"
          >
            📞
          </span>
          <a
            href="tel:503-543-2345"
            class="emotion-2 emotion-3"
          >
            503-543-2345
          </a>
        </span>
      </div>
    </address>
  </div>
</div>
`;

exports[`Card w/o phone is rendered 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -41,27 +41,8 @@
            >
              123 Main Street
            </a>
          </span>
        </div>
-       <div>
-         <span
-           class=\\"css-1kssyo4-EmojiLabel-EmojiLabel\\"
-         >
-           <span
-             aria-label=\\"phone receiver\\"
-             role=\\"img\\"
-           >
-             📞
-           </span>
-            
-           <a
-             class=\\"css-1l6go11-Link ek86r7m1\\"
-             href=\\"tel:503-543-2345\\"
-           >
-             503-543-2345
-           </a>
-         </span>
-       </div>
      </address>
    </div>
  </div>"
`;

exports[`Card w/o price and phone is rendered 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -18,13 +18,10 @@
          rel=\\"nofollow\\"
        >
          Little Big Burger
        </a>
      </div>
-     <p>
-       100.00
-     </p>
      <address>
        <div>
          <span
            class=\\"css-1kssyo4-EmojiLabel-EmojiLabel\\"
          >
@@ -41,27 +38,8 @@
            >
              123 Main Street
            </a>
          </span>
        </div>
-       <div>
-         <span
-           class=\\"css-1kssyo4-EmojiLabel-EmojiLabel\\"
-         >
-           <span
-             aria-label=\\"phone receiver\\"
-             role=\\"img\\"
-           >
-             📞
-           </span>
-            
-           <a
-             class=\\"css-1l6go11-Link ek86r7m1\\"
-             href=\\"tel:503-543-2345\\"
-           >
-             503-543-2345
-           </a>
-         </span>
-       </div>
      </address>
    </div>
  </div>"
`;

exports[`Card w/o price is rendered 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -18,13 +18,10 @@
          rel=\\"nofollow\\"
        >
          Little Big Burger
        </a>
      </div>
-     <p>
-       100.00
-     </p>
      <address>
        <div>
          <span
            class=\\"css-1kssyo4-EmojiLabel-EmojiLabel\\"
          >"
`;
